[fix]: add z-index for different sidebars

--- a/src/assets/HamburgerButton/HamburgerButton.module.scss
+++ b/src/assets/HamburgerButton/HamburgerButton.module.scss
@@ -27,9 +27,6 @@
 
 
 
-    &.opened {
-        
-    }
     &.opened .line1 {
         stroke-dasharray: 90 207;
         stroke-dashoffset: -134;
