--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -28,7 +28,7 @@
         height: 100%;
         transition: 0.3s;
         cursor: pointer;
-        z-index: 10;
+        z-index: 1;
         font-size: 1.5em;
         font-weight: bold;
         display: flex;
