--- a/src/components/sidebar/settings/style.module.scss
+++ b/src/components/sidebar/settings/style.module.scss
@@ -5,7 +5,7 @@ aside {
         width: 300px;
         top: 0;
         left: 0;
-        z-index: 10;
+        z-index: 9999;
         opacity: 0;
         transform: translateX(-100%);
         background-color: rgb(75, 72, 72);
