--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -12,6 +12,7 @@ aside {
     &.active {
         opacity: 1;
         transform: translateX(0);
+        z-index: 9999;
     }
     & .title {
         text-align: center;
